--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -5,14 +5,28 @@
 aws_region = "us-east-1"
 
 # Snowflake Integration Configuration
-# Leave these empty for initial deployment (Stage 1)
+# ===================================
+# IMPORTANT: Leave these empty for initial deployment (Stage 1)
 # Fill in after setting up Snowflake storage integration (Stage 2)
 
-# Get these values from Snowflake after creating the storage integration:
-# 1. Run: DESC STORAGE INTEGRATION s3_integration;
-# 2. Extract account ID from STORAGE_AWS_IAM_USER_ARN (12-digit number)
-# 3. Copy STORAGE_AWS_EXTERNAL_ID value exactly
+# Step-by-step instructions:
+# 1. Run terraform apply (first time) - creates basic infrastructure
+# 2. Create Snowflake storage integration using the role ARN from terraform output
+# 3. Run: DESC STORAGE INTEGRATION s3_integration; in Snowflake
+# 4. Copy the COMPLETE values below (don't modify them):
 
-snowflake_account_id = ""  # Replace with your Snowflake AWS account ID (12 digits)
-snowflake_external_id = ""  # Replace with your external ID from Snowflake
-enable_snowflake_integration = false  # Set to true after you have the Snowflake values
+# STORAGE_AWS_IAM_USER_ARN from Snowflake - 12-digit AWS account number
+# Example: "123456789012"
+snowflake_account_id = ""
+
+# STORAGE_AWS_EXTERNAL_ID from Snowflake - COMPLETE string
+# Example: "ABC123_SFCRole=1_xyz="
+snowflake_external_id = ""
+
+# Set to true after you have the Snowflake values above
+enable_snowflake_integration = false
+
+# EXAMPLE (replace with your actual values):
+# snowflake_account_id = "123456789012"
+# snowflake_external_id = "ABC123_SFCRole=1_xyz="
+# enable_snowflake_integration = true
