--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=1.3.0
 numpy>=1.21.0
 boto3>=1.20.0
 sagemaker>=2.48.0
-scikit-learn>=1.0.0
+scikit-learn==1.2.1
 matplotlib>=3.5.0
 seaborn>=0.11.0
 joblib>=1.1.0
